--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,19 @@ html {
 
 body {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  height: 100vh;
 }
 
 h1, h2 {
   font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+#about-bod {
+  align-items: center;
+  /* width: 100%; */
+  margin-left: 30px;
+
+}
 
 .brand {
   width: 190px;
@@ -22,13 +29,31 @@ h1, h2 {
   text-align: center;
   color: white;
   font-family: 'Georgia', Times, Times New Roman, serif;
-  height: 100px;
-  position: absolute;
+  height: 99px;
   top: 0;
-  left: 7.5%;
   display: block;
-  line-height: 100px;
+  line-height: 99px;
   font-size: 30px;
+}
+
+.bod {
+  padding: 25px;
+  display: inline-block;
+  width: 100%
+}
+
+#bs-example-navbar-collapse-1 {
+  top: 0;
+  padding-left: 0px;
+}
+
+#container-bod {
+  margin-top: 25px;
+  padding-bottom: 25px;
+}
+
+#exampleInputEmail1 {
+  height: 59px;
 }
 
 h2 {
@@ -39,41 +64,42 @@ h2 {
 
 
 .footer {
-    width: 100%;
-    background-color: #666666;
-    color: white;
-    text-align: center;
-    margin-top: 125px;
-    padding-top: 55px;
-    border-top: 5px solid #4aaaa5;
-    position: absolute;
-    bottom: 0;
+  border-top: 5px solid #4aaaa5;
+  width: 100%;
+  background-color: #666666;
+  color: white;
+  text-align: center;
+  margin-top: 125px;
+  padding: 30px 0;
 }
 
 .caption {
   background-color: rgba(74,170,165,0.5);
   bottom:0;
-  font-size: 2em;
+  font-size: large;
   font-weight: 700;
-  padding: 2% 3%;
   position:absolute;
   z-index: 10;
   color: white;
-  width: 100%;
+  width: 80%;
   text-align: center;
 }
 
 .container-fluid {
-  padding: 25px 25px 25px 25px;
-  border: 1px solid #dddddd;
   max-width: 960px;
   margin: auto;
   background-color: #ffffff;
-  margin-bottom: 80px;
+  padding: 0px;
+}
+
+#index-para-1 {
+  right:0;
+  margin-left: 20px;
 }
 
 .navbar-default {
-  height: 100px;
+  border: 1px solid #dddddd;
+  background-color: #ffffff
 }
 
 .main {
@@ -81,10 +107,43 @@ h2 {
   padding-bottom: 20px;
 }
 
+.navbar-header {
+  padding-left: 30px;
+}
+
+#nav-butt {
+  line-height: 98.9;
+  vertical-align: middle;
+  height: 98.9;
+  padding-top: 25px;
+}
+
 #par-2 {
   padding: 15px;
 }
 
+#port-con {
+  padding-bottom: 40px;
+  padding-left: 30px;
+}
+
 body {
   position: relative;
+}
+
+#specs {
+  padding-right: 20px;
+}
+
+#exampleInputEmail1 {
+  height: 175px;
+}
+
+#tops {
+  padding: 0px;
+  width: 100%
+}
+
+page-header {
+  margin-top: 0px;
 }
